# programmiersprachen-helloworld

./: CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
source/: tests.cpp
